30 Jun 2013: Wouter
	- tag 1.4.21rc1

29 Jun 2013: Wouter
	- Fix#512 memleak in testcode for testbound (if it fails).
	- Fix#512 NSS returned arrays out of setup function to be statics.

26 Jun 2013: Wouter
	- max include of 100.000 files (depth and globbed at one time).
	  This is to preserve system memory in bug cases, or endless cases.
	- iana portlist updated.

19 Jun 2013: Wouter
	- streamtcp man page, contributed by Tomas Hozza.
	- iana portlist updated.
	- libunbound documentation on how to avoid openssl race conditions.

25 Jun 2013: Wouter
	- Squelch sendto-permission denied errors when the network is
	  not connected, to avoid spamming syslog.
	- configure --disable-flto option (from Robert Edmonds).

18 Jun 2013: Wouter
	- Fix for const string literals in C++ for libunbound, from Karel
	  Slany.
	- iana portlist updated.

17 Jun 2013: Wouter
	- Fixup manpage syntax.

14 Jun 2013: Wouter
	- get_option and set_option support for log-time-ascii, python-script
	  val-sig-skew-min and val-sig-skew-max.  log-time-ascii takes effect
	  immediately.  The others are mostly useful for libunbound users.

13 Jun 2013: Wouter
	- get_option, set_option, unbound-checkconf -o and libunbound
	  getoption and setoption support cache-min-ttl and cache-max-ttl.

10 Jun 2013: Wouter
	- Fix#501: forward-first does not recurse, when forward name is ".".
	- iana portlist update.
	- Max include depth is unlimited.

27 May 2013: Wouter
	- Update acx_pthreads.m4 to ax_pthreads.4 (2013-03-29), and apply
	  patch to it to not fail when -Werror is also specified, from the
	  autoconf-archives.
	- iana portlist update.

21 May 2013: Wouter
	- Explain bogus and secure flags in libunbound more.

16 May 2013: Wouter
	- Fix#499 use-after-free in out-of-memory handling code (thanks Jake
	  Montgomery).
	- Fix#500 use on non-initialised values on socket bind failures.

15 May 2013: Wouter
	- Fix round-robin doesn't work with some Windows clients (from Ilya
	  Bakulin).

3 May 2013: Wouter